Fix alignment of sorters and add subtask icon.

--- a/assets/sass/components/dnd.scss
+++ b/assets/sass/components/dnd.scss
@@ -26,7 +26,7 @@
 }
 
 .dnd-dropper-left-offset {
-  margin-left: -30px;
+  margin-left: -34px;
   padding-left: 0;
 
   .dnd-handle {
